--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Gurev Aleksey"/>
+    <meta property="og:description" content="ToDo Gurev Aleksey"/>
+    <meta property="og:image" content="http://360.airvideo.pro/image-react.png"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:url" content= "https://http://360.airvideo.pro" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ToDo
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
